src/output/GrammarParser.java
package output;
// $ANTLR 3.5.1 /Users/jean-baptistedominguez/PCL/grammaire/Grammar.g 2016-03-26 19:45:26

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class GrammarParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "BODY", "BORNE_INF", "BORNE_SUP", 
		"COMMENT", "COND", "DECLARATIONS", "DECL_FCT", "DECL_TYPE", "DECL_VAR", 
		"DEF_ARRAY", "ELSE", "FCT_ARG", "FIELD", "FIELDS", "FOR", "ID", "IF", 
		"INDICE", "INT", "LET", "OF", "PARAMS", "PROG", "SEQUENCE", "STRING", 
		"STRUCT_DEC", "THEN", "WHILE", "WS", "'&'", "'('", "')'", "'*'", "'+'", 
		"','", "'-'", "'.'", "'/'", "':'", "':='", "';'", "'<'", "'<='", "'<>'", 
		"'='", "'>'", "'>='", "'['", "']'", "'array'", "'break'", "'do'", "'else'", 
		"'end'", "'for'", "'function'", "'if'", "'in'", "'let'", "'nil'", "'of'", 
		"'then'", "'to'", "'type'", "'var'", "'while'", "'{'", "'|'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int T__51=51;
	public static final int T__52=52;
	public static final int T__53=53;
	public static final int T__54=54;
	public static final int T__55=55;
	public static final int T__56=56;
	public static final int T__57=57;
	public static final int T__58=58;
	public static final int T__59=59;
	public static final int T__60=60;
	public static final int T__61=61;
	public static final int T__62=62;
	public static final int T__63=63;
	public static final int T__64=64;
	public static final int T__65=65;
	public static final int T__66=66;
	public static final int T__67=67;
	public static final int T__68=68;
	public static final int T__69=69;
	public static final int T__70=70;
	public static final int T__71=71;
	public static final int T__72=72;
	public static final int BODY=4;
	public static final int BORNE_INF=5;
	public static final int BORNE_SUP=6;
	public static final int COMMENT=7;
	public static final int COND=8;
	public static final int DECLARATIONS=9;
	public static final int DECL_FCT=10;
	public static final int DECL_TYPE=11;
	public static final int DECL_VAR=12;
	public static final int DEF_ARRAY=13;
	public static final int ELSE=14;
	public static final int FCT_ARG=15;
	public static final int FIELD=16;
	public static final int FIELDS=17;
	public static final int FOR=18;
	public static final int ID=19;
	public static final int IF=20;
	public static final int INDICE=21;
	public static final int INT=22;
	public static final int LET=23;
	public static final int OF=24;
	public static final int PARAMS=25;
	public static final int PROG=26;
	public static final int SEQUENCE=27;
	public static final int STRING=28;
	public static final int STRUCT_DEC=29;
	public static final int THEN=30;
	public static final int WHILE=31;
	public static final int WS=32;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public GrammarParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public GrammarParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return GrammarParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/Users/jean-baptistedominguez/PCL/grammaire/Grammar.g"; }


	public static class prog_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "prog"
	// /Users/jean-baptistedominguez/PCL/grammaire/Grammar.g:37:1: prog : expr EOF -> ^( PROG expr ) ;
	public final GrammarParser.prog_return prog() throws RecognitionException {
		GrammarParser.prog_return retval = new GrammarParser.prog_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token EOF2=null;
		ParserRuleReturnScope expr1 =null;

		Object EOF2_tree=null;
		RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
		RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");

		try {
			// /Users/jean-baptistedominguez/PCL/grammaire/Grammar.g:38:2: ( expr EOF -> ^( PROG expr ) )
			// /Users/jean-baptistedominguez/PCL/grammaire/Grammar.g:38:4: expr EOF
			{
			pushFollow(FOLLOW_expr_in_prog143);
			expr1=expr();
			state._fsp--;

			stream_expr.add(expr1.getTree());
			EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_prog145);  
			stream_EOF.add(EOF2);

			// AST REWRITE
			// elements: expr
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 38:13: -> ^( PROG expr )
			{
				// /Users/jean-baptistedominguez/PCL/grammaire/Grammar.g:38:16: ^( PROG expr )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(PROG, "PROG"), root_1);
				adaptor.addChild(root_1, stream_expr.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "prog"


	public static class expr_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "expr"
	// /Users/jean-baptistedominguez/PCL/grammaire/Grammar.g:41:1: expr : ( 'break' -> 'break' | STRING -> STRING | loop -> loop | condition -> condition | let -> let | operation -> operation );
	public final GrammarParser.expr_return expr() throws RecognitionException {
		GrammarParser.expr_return retval = new GrammarParser.expr_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal3=null;
		Token STRING4=null;
		ParserRuleReturnScope loop5 =null;
		ParserRuleReturnScope condition6 =null;
		ParserRuleReturnScope let7 =null;
		ParserRuleReturnScope operation8 =null;

		Object string_literal3_tree=null;
		Object STRING4_tree=null;
		RewriteRuleTokenStream stream_STRING=new RewriteRuleTokenStream(adaptor,"token STRING");
		RewriteRuleTokenStream stream_54=new RewriteRuleTokenStream(adaptor,"token 54");
		RewriteRuleSubtreeStream stream_condition=new RewriteRuleSubtreeStream(adaptor,"rule condition");
		RewriteRuleSubtreeStream stream_loop=new RewriteRuleSubtreeStream(adaptor,"rule loop");
		RewriteRuleSubtreeStream stream_let=new RewriteRuleSubtreeStream(adaptor,"rule let");
		RewriteRuleSubtreeStream stream_operation=new RewriteRuleSubtreeStream(adaptor,"rule operation");

		try {
			// /Users/jean-baptistedominguez/PCL/grammaire/Grammar.g:42:2: ( 'break' -> 'break' | STRING -> STRING | loop -> loop | condition -> condition | let -> let | operation -> operation )
			int alt1=6;
			switch ( input.LA(1) ) {
			case 54:
				{
				alt1=1;
				}
				break;
			case STRING:
				{
				alt1=2;
				}
				break;
			case 58:
			case 69:
				{
				alt1=3;
				}
				break;
			case 60:
				{
				alt1=4;
				}
				break;
			case 62:
				{
				alt1=5;
				}
				break;
			case ID:
			case INT:
			case 34:
			case 39:
			case 63:
				{
				alt1=6;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 1, 0, input);
				throw nvae;
			}
			switch (alt1) {
				case 1 :
					// /Users/jean-baptistedominguez/PCL/grammaire/Grammar.g:42:4: 'break'
					{
					string_literal3=(Token)match(input,54,FOLLOW_54_in_expr167);  
					stream_54.add(string_literal3);

					// AST REWRITE
					// elements: 54
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (Object)adaptor.nil();
					// 42:13: -> 'break'
					{
						adaptor.addChild(root_0, stream_54.nextNode());
					}


					retval.tree = root_0;

					}
					break;
				case 2 :
					// /Users/jean-baptistedominguez/PCL/grammaire/Grammar.g:43:4: STRING
					{
					STRING4=(Token)match(input,STRING,FOLLOW_STRING_in_expr178);  
					stream_STRING.add(STRING4);

					// AST REWRITE
					// elements: STRING
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (Object)adaptor.nil();
					// 43:12: -> STRING
					{
						adaptor.addChild(root_0, stream_STRING.nextNode());
					}


					retval.tree = root_0;

					}
					break;
				case 3 :
					// /Users/jean-baptistedominguez/PCL/grammaire/Grammar.g:44:4: loop
					{
					pushFollow(FOLLOW_loop_in_expr189);
					loop5=loop();
					state._fsp--;

					stream_loop.add(loop5.getTree());
					// AST REWRITE
					// elements: loop
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (Object)adaptor.nil();
					// 44:10: -> loop
					{
						adaptor.addChild(root_0, stream_loop.nextTree());
					}


					retval.tree = root_0;

					}
					break;
				case 4 :
					// /Users/jean-baptistedominguez/PCL/grammaire/Grammar.g:45:5: condition
					{
					pushFollow(FOLLOW_condition_in_expr204);
					condition6=condition();
					state._fsp--;

					stream_condition.add(condition6.getTree());
					// AST REWRITE
					// elements: condition
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (Object)adaptor.nil();
					// 45:15: -> condition
					{
						adaptor.addChild(root_0, stream_condition.nextTree());
					}


					retval.tree = root_0;

					}
					break;
				case 5 :
					// /Users/jean-baptistedominguez/PCL/grammaire/Grammar.g:46:4: let
					{
					pushFollow(FOLLOW_let_in_expr214);
					let7=let();
					state._fsp--;

					stream_let.add(let7.getTree());
					// AST REWRITE
					// elements: let
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (Object)adaptor.nil();
					// 46:9: -> let
					{
						adaptor.addChild(root_0, stream_let.nextTree());
					}


					retval.tree = root_0;

					}
					break;
				case 6 :
					// /Users/jean-baptistedominguez/PCL/grammaire/Grammar.g:47:4: operation
					{
					pushFollow(FOLLOW_operation_in_expr226);
					operation8=operation();
					state._fsp--;

					stream_operation.add(operation8.getTree());
					// AST REWRITE
					// elements: operation
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (Object)adaptor.nil();
					// 47:14: -> operation
					{
						adaptor.addChild(root_0, stream_operation.nextTree());
					}


					retval.tree = root_0;

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "expr"


	public static class operation_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "operation"
	// /Users/jean-baptistedominguez/PCL/grammaire/Grammar.g:50:1: operation : orOperation ( options {greedy=true; } : ':=' ^ expr )? ;
	public final GrammarParser.operation_return operation() throws RecognitionException {
		GrammarParser.operation_return retval = new GrammarParser.operation_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal10=null;
		ParserRuleReturnScope orOperation9 =null;
		ParserRuleReturnScope expr11 =null;

		Object string_literal10_tree=null;

		try {
			// /Users/jean-baptistedominguez/PCL/grammaire/Grammar.g:51:2: ( orOperation ( options {greedy=true; } : ':=' ^ expr )? )
			// /Users/jean-baptistedominguez/PCL/grammaire/Grammar.g:51:4: orOperation ( options {greedy=true; } : ':=' ^ expr )?
			{
			root_0 = (Object)adaptor.nil();


			pushFollow(FOLLOW_orOperation_in_operation243);
			orOperation9=orOperation();
			state._fsp--;

			adaptor.addChild(root_0, orOperation9.getTree());

			// /Users/jean-baptistedominguez/PCL/grammaire/Grammar.g:51:16: ( options {greedy=true; } : ':=' ^ expr )?
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==43) ) {
				alt2=1;
			}
			switch (alt2) {
				case 1 :
					// /Users/jean-baptistedominguez/PCL/grammaire/Grammar.g:51:43: ':=' ^ expr
					{
					string_literal10=(Token)match(input,43,FOLLOW_43_in_operation256); 
					string_literal10_tree = (Object)adaptor.create(string_literal10);
					root_0 = (Object)adaptor.becomeRoot(string_literal10_tree, root_0);

					pushFollow(FOLLOW_expr_in_operation260);
					expr11=expr();
					state._fsp--;

					adaptor.addChild(root_0, expr11.getTree());

					}
					break;

			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "operation"


	public static class field_list_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "field_list"
	// /Users/jean-baptistedominguez/PCL/grammaire/Grammar.g:54:1: field_list : id= ID '=' ex= expr ( ',' field= field_list )? -> ^( '=' $id $ex) ( $field)? ;
	public final GrammarParser.field_list_return field_list() throws RecognitionException {
		GrammarParser.field_list_return retval = new GrammarParser.field_list_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token id=null;
		Token char_literal12=null;
		Token char_literal13=null;
		ParserRuleReturnScope ex =null;
		ParserRuleReturnScope field =null;

		Object id_tree=null;
		Object char_literal12_tree=null;
		Object char_literal13_tree=null;
		RewriteRuleTokenStream stream_48=new RewriteRuleTokenStream(adaptor,"token 48");
		RewriteRuleTokenStream stream_38=new RewriteRuleTokenStream(adaptor,"token 38");
		RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
		RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");
		RewriteRuleSubtreeStream stream_field_list=new RewriteRuleSubtreeStream(adaptor,"rule field_list");

		try {
			// /Users/jean-baptistedominguez/PCL/grammaire/Grammar.g:55:2: (id= ID '=' ex= expr ( ',' field= field_list )? -> ^( '=' $id $ex) ( $field)? )
			// /Users/jean-baptistedominguez/PCL/grammaire/Grammar.g:55:4: id= ID '=' ex= expr ( ',' field= field_list )?
			{
			id=(Token)match(input,ID,FOLLOW_ID_in_field_list279);  
			stream_ID.add(id);

			char_literal12=(Token)match(input,48,FOLLOW_48_in_field_list281);  
			stream_48.add(char_literal12);

			pushFollow(FOLLOW_expr_in_field_list287);
			ex=expr();
			state._fsp--;

			stream_expr.add(ex.getTree());
			// /Users/jean-baptistedominguez/PCL/grammaire/Grammar.g:55:26: ( ',' field= field_list )?
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==38) ) {
				alt3=1;
			}
			switch (alt3) {
				case 1 :
					// /Users/jean-baptistedominguez/PCL/grammaire/Grammar.g:55:27: ',' field= field_list
					{
					char_literal13=(Token)match(input,38,FOLLOW_38_in_field_list290);  
					stream_38.add(char_literal13);

					pushFollow(FOLLOW_field_list_in_field_list296);
					field=field_list();
					state._fsp--;

					stream_field_list.add(field.getTree());
					}
					break;

			}

			// AST REWRITE
			// elements: ex, id, field, 48
			// token labels: id
			// rule labels: ex, field, retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleTokenStream stream_id=new RewriteRuleTokenStream(adaptor,"token id",id);
			RewriteRuleSubtreeStream stream_ex=new RewriteRuleSubtreeStream(adaptor,"rule ex",ex!=null?ex.getTree():null);
			RewriteRuleSubtreeStream stream_field=new RewriteRuleSubtreeStream(adaptor,"rule field",field!=null?field.getTree():null);
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 55:53: -> ^( '=' $id $ex) ( $field)?
			{
				// /Users/jean-baptistedominguez/PCL/grammaire/Grammar.g:55:56: ^( '=' $id $ex)
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot(stream_48.nextNode(), root_1);
				adaptor.addChild(root_1, stream_id.nextNode());
				adaptor.addChild(root_1, stream_ex.nextTree());
				adaptor.addChild(root_0, root_1);
				}

				// /Users/jean-baptistedominguez/PCL/grammaire/Grammar.g:55:72: ( $field)?
				if ( stream_field.hasNext() ) {
					adaptor.addChild(root_0, stream_field.nextTree());
				}
				stream_field.reset();

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "field_list"


	public static class orOperation_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "orOperation"
	// /Users/jean-baptistedominguez/PCL/grammaire/Grammar.g:58:1: orOperation : andOperation ( options {greedy=true; } : ( '|' ^) andOperation )* ;
	public final GrammarParser.orOperation_return orOperation() throws RecognitionException {
		GrammarParser.orOperation_return retval = new GrammarParser.orOperation_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token char_literal15=null;
		ParserRuleReturnScope andOperation14 =null;
		ParserRuleReturnScope andOperation16 =null;

		Object char_literal15_tree=null;

		try {
			// /Users/jean-baptistedominguez/PCL/grammaire/Grammar.g:59:2: ( andOperation ( options {greedy=true; } : ( '|' ^) andOperation )* )
			// /Users/jean-baptistedominguez/PCL/grammaire/Grammar.g:59:4: andOperation ( options {greedy=true; } : ( '|' ^) andOperation )*
			{
			root_0 = (Object)adaptor.nil();


			pushFollow(FOLLOW_andOperation_in_orOperation330);
			andOperation14=andOperation();
			state._fsp--;

			adaptor.addChild(root_0, andOperation14.getTree());

			// /Users/jean-baptistedominguez/PCL/grammaire/Grammar.g:59:17: ( options {greedy=true; } : ( '|' ^) andOperation )*
			loop4:
			while (true) {
				int alt4=2;
				int LA4_0 = input.LA(1);
				if ( (LA4_0==71) ) {
					alt4=1;
				}

				switch (alt4) {
				case 1 :
					// /Users/jean-baptistedominguez/PCL/grammaire/Grammar.g:59:43: ( '|' ^) andOperation
					{
					// /Users/jean-baptistedominguez/PCL/grammaire/Grammar.g:59:43: ( '|' ^)
					// /Users/jean-baptistedominguez/PCL/grammaire/Grammar.g:59:44: '|' ^
					{
					char_literal15=(Token)match(input,71,FOLLOW_71_in_orOperation343); 
					char_literal15_tree = (Object)adaptor.create(char_literal15);
					root_0 = (Object)adaptor.becomeRoot(char_literal15_tree, root_0);

					}

					pushFollow(FOLLOW_andOperation_in_orOperation347);
					andOperation16=andOperation();
					state._fsp--;

					adaptor.addChild(root_0, andOperation16.getTree());

					}
					break;

				default :
					break loop4;
				}
			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "orOperation"


	public static class andOperation_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "andOperation"
	// /Users/jean-baptistedominguez/PCL/grammaire/Grammar.g:62:1: andOperation : booleanOperation ( options {greedy=true; } : ( '&' ^) booleanOperation )* ;
	public final GrammarParser.andOperation_return andOperation() throws RecognitionException {
		GrammarParser.andOperation_return retval = new GrammarParser.andOperation_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token char_literal18=null;
		ParserRuleReturnScope booleanOperation17 =null;
		ParserRuleReturnScope booleanOperation19 =null;

		Object char_literal18_tree=null;

		try {
			// /Users/jean-baptistedominguez/PCL/grammaire/Grammar.g:63:2: ( booleanOperation ( options {greedy=true; } : ( '&' ^) booleanOperation )* )
			// /Users/jean-baptistedominguez/PCL/grammaire/Grammar.g:63:4: booleanOperation ( options {greedy=true; } : ( '&' ^) booleanOperation )*
			{
			root_0 = (Object)adaptor.nil();


			pushFollow(FOLLOW_booleanOperation_in_andOperation361);
			booleanOperation17=booleanOperation();
			state._fsp--;

			adaptor.addChild(root_0, booleanOperation17.getTree());

			// /Users/jean-baptistedominguez/PCL/grammaire/Grammar.g:63:21: ( options {greedy=true; } : ( '&' ^) booleanOperation )*
			loop5:
			while (true) {
				int alt5=2;
				int LA5_0 = input.LA(1);
				if ( (LA5_0==33) ) {
					alt5=1;
				}

				switch (alt5) {
				case 1 :
					// /Users/jean-baptistedominguez/PCL/grammaire/Grammar.g:63:47: ( '&' ^) booleanOperation
					{
					// /Users/jean-baptistedominguez/PCL/grammaire/Grammar.g:63:47: ( '&' ^)
					// /Users/jean-baptistedominguez/PCL/grammaire/Grammar.g:63:48: '&' ^
					{
					char_literal18=(Token)match(input,33,FOLLOW_33_in_andOperation374); 
					char_literal18_tree = (Object)adaptor.create(char_literal18);
					root_0 = (Object)adaptor.becomeRoot(char_literal18_tree, root_0);

					}

					pushFollow(FOLLOW_booleanOperation_in_andOperation378);
					booleanOperation19=booleanOperation();
					state._fsp--;

					adaptor.addChild(root_0, booleanOperation19.getTree());

					}
					break;

				default :
					break loop5;
				}
			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "andOperation"


	public static class booleanOperation_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};

